# Raytracer

./: .gitignore  CMakeLists.txt  README.md  Raytracer.vcxproj  Raytracer.vcxproj.filters
Debug/: vc142.idb
Debug/Raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/materials/: basic_materials.json
src/: Light.h  Main.cpp  Material.cpp  Material.h  Plane.h  RGBImage.cpp  RGBImage.h  Ray.h  Renderer.h  Scene.cpp  Scene.h  SceneObject.h  Sphere.h  Vector3d.h
